# ticket_llm_test

./: .env.example  .gitignore  CLAUDE.md  README.md  evaluate_tickets.py  pyproject.toml
.github/workflows/: ci.yml
docs/: 01-requirements.md  02-analysis.md  03-solution-design.md  04-model-comparison.md
results/: grok-deep.csv  groq-balanced.csv  groq-fast.csv  openai-balanced.csv  openai-deep.csv  openai-fast.csv
src/: __init__.py  config.py  csv_handler.py  evaluator.py  parser.py  prompts.py
src/clients/: __init__.py  base.py  factory.py  grok_client.py  groq_client.py  openai_client.py
src/models/: __init__.py  evaluation_result.py  ticket_evaluated.py  ticket_input.py
tests/: test_evaluate.py  test_llm_judge.py
